--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,13 +1,14 @@
 :root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 400;
+  --font-family: 'Lora', sans-serif;
+  --second-family: 'Cinzel', sans-serif;
+  --third-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, sans-serif;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  font-family: var(--font-family);
+  font-size: 12px;
+  font-weight: 400;
+  color: #fffffd;
+  background-color: #182223;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,9 +25,24 @@ body {
   margin: 0;
 }
 
-main {
-  flex-grow: 1;
+.section {
+  margin-bottom: 40px;
 }
-main:has(.back-link) {
-  text-align: center;
+
+.container {
+  width: 320px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+/* Styles for Desktop devices */
+@media only screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    padding: 0 20px;
+  }
+
+  .section {
+  margin-bottom: 80px;
+}
 }
