--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,12 +7,20 @@
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
-@import url('./container.css');
+
 @import url('./animations.css');
 
 /* Sections style */
 @import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
+@import url('./mobile-menu.css');
+@import url('./home.css');
+@import url('./about.css');
+@import url('./how-to-play.css');
+@import url('./features.css');
+@import url('./characters.css');
+@import url('./atmosphere.css');
+@import url('./reviews.css');
+@import url('./faq.css');
+@import url('./call-to-action.css');
+@import url('./cookies-modal.css');
 @import url('./footer.css');
