--- a/src/css/base.css
+++ b/src/css/base.css
@@ -25,6 +25,15 @@ body {
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
+main {
+  flex-grow: 1;
+}
+
 .section {
   margin-bottom: 40px;
 }
@@ -43,6 +52,19 @@ body {
   }
 
   .section {
-  margin-bottom: 80px;
+    margin-bottom: 80px;
+  }
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
 }
