--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,1 +1,28 @@
+.nav-list {
+  display: none;
+}
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  padding: 10px 0 6px 5px;
+}
+
+.burger-btn {
+  border: none;
+  background-color: transparent;
+  padding: 10px 5px 6px 0;
+}
+
+@media only screen and (min-width: 1200px) {
+  .burger-btn {
+    display: none;
+  }
+
+  .nav-list {
+    display: flex;
+  }
+}
