--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,3 +1,14 @@
+/* Після імпорту modern-normalize */
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
