--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,3 +1,7 @@
+.section-header {
+  background-color: #0c0f10;
+}
+
 .nav-list {
   display: none;
 }
@@ -22,7 +26,28 @@
     display: none;
   }
 
+  .logo {
+    padding: 24px 0;
+    width: 32px;
+    height: 32px;
+  }
+
   .nav-list {
     display: flex;
+    gap: 48px;
+  }
+
+  .nav-item {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 10px;
+    color: #fffffd;
+    padding: 33px 0;
+
+    &:hover,
+    &:focus,
+    &:active {
+      color: #e7e7a6;
+    }
   }
 }
