--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,20 @@
-<section class="section">
+<section class="section-header">
   <div class="container">
     <nav class="navbar">
       <a class="logo" href="/src/index.html">
         <img src="/img/header/logo.png" alt="Logo" width="32" height="32" />
       </a>
       <ul class="nav-list">
-        <li class="nav-item"><a href="#header">Home</a></li>
-        <li class="nav-item"><a href="#about">About the game</a></li>
-        <li class="nav-item"><a href="#how-to-play">How to play</a></li>
-        <li class="nav-item"><a href="#features">Game features</a></li>
+        <li class="nav-item"><a class="nav-item" href="#header">Home</a></li>
+        <li class="nav-item">
+          <a class="nav-item" href="#about">About the game</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-item" href="#how-to-play">How to play</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-item" href="#features">Game features</a>
+        </li>
         <li class="nav-item"><a href="#characters">Main characters</a></li>
         <li class="nav-item"><a href="#atmosphere">Game atmosphere</a></li>
         <li class="nav-item"><a href="#reviews">Reviews</a></li>
