--- a/src/css/base.css
+++ b/src/css/base.css
@@ -22,7 +22,7 @@ body {
   flex-direction: column;
   min-width: 100vw;
   min-height: 100vh;
-  margin: 0;
+  margin: 47px 0 0 0;
 }
 
 html {
@@ -45,6 +45,9 @@ main {
 
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1200px) {
+  body {
+    margin: 78px 0 0 0;
+  }
   .container {
     width: 1200px;
     padding: 0 20px;
