--- a/src/css/home.css
+++ b/src/css/home.css
@@ -50,6 +50,7 @@
   }
 }
 
+/* Styles for Desktop devices */
 @media only screen and (min-width: 1200px) {
   .home-content-wrp {
     max-width: 530px;
