fixed scrollbar issue

--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -1,7 +1,7 @@
 <section class="section" id="home">
   <div class="container home-wrp">
     
-      <picture>
+      <picture class="img-warrior">
         <!--desktop-->
         <source
           srcset="
@@ -22,7 +22,7 @@
 
         <!--Fallback-->
         <img
-          class="img-warrior"
+          
           src="/img/home/main-picture-mobile.png"
           alt="Epic warrior"
           loading="lazy"
