--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="container about-wrp">
-    <h2>About the game</h2>
+    <h2 class="about-title">About the game</h2>
 
     <div class="about-content">
       <picture>
@@ -29,19 +29,19 @@
           height="auto"
         />
       </picture>
-      <div>
+      <div class="about-descr">
         <p>
           Enter an era of war, betrayal, and resilience in Dynasty: Fallen &
           Rise, a tactical strategy RPG where your choices shape the fate of an
           empire.Play as an exiled heir fighting to reclaim the throne of your
-          fallen kingdom. Build alliances, master battlefield tactics, and
+          fallen kingdom.Build alliances, master battlefield tactics, and
           command legendary heroes in your quest to unite the land once more.
         </p>
         <p>
           Craft your legacy in a world where every sword stroke echoes through
           history.
         </p>
-        <ul>
+        <ul style="list-style-type: disc; padding-left: 17px">
           <li>Rebuild your dynasty from ruin.</li>
           <li>Command armies in real-time battles.</li>
           <li>Outsmart rivals in political intrigue and strategy.</li>
