--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section" id="about">
   <div class="container about-wrp">
     <h2 class="about-title">About the game</h2>
 
