--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
         <img src="/img/header/logo.png" alt="Logo" width="32" height="32" />
       </a>
       <ul class="nav-list">
-        <li class="nav-item"><a class="nav-item" href="#header">Home</a></li>
+        <li class="nav-item"><a class="nav-item" href="#home">Home</a></li>
         <li class="nav-item">
           <a class="nav-item" href="#about">About the game</a>
         </li>
