--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<section class="section-footer">
   <div class="container footer">
     <div class="footer-nav-wrapper">
       <ul class="footer-nav">
@@ -25,4 +25,4 @@
       <p class="domen">© 2025 glowdynastysaga.com – All rights reserved.</p>
     </div>
   </div>
-</footer>
+</section>
