once more added privacy pages

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,19 +3,19 @@
     <div class="footer-nav-wrapper">
       <ul class="footer-nav">
         <li class="footer-desc">
-          <a class="footer-link" href="../privacy.html" target="_blank"
+          <a class="footer-link" href="./privacy.html" target="_blank"
             >Privacy Policy</a
           >
         </li>
         <span class="footer-span">/</span>
         <li class="footer-desc">
-          <a class="footer-link" href="../terms.html" target="_blank"
+          <a class="footer-link" href="./terms.html" target="_blank"
             >Terms & Conditions
           </a>
         </li>
         <span class="footer-span">/</span>
         <li class="footer-desc">
-          <a class="footer-link" href="../cookies.html" target="_blank"
+          <a class="footer-link" href="./cookies.html" target="_blank"
             >Cookies Policy</a
           >
         </li>
