--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -33,9 +33,12 @@
         <p>
           Enter an era of war, betrayal, and resilience in Dynasty: Fallen &
           Rise, a tactical strategy RPG where your choices shape the fate of an
-          empire.Play as an exiled heir fighting to reclaim the throne of your
-          fallen kingdom.Build alliances, master battlefield tactics, and
-          command legendary heroes in your quest to unite the land once more.
+          empire.
+        </p>
+        <p>
+          Play as an exiled heir fighting to reclaim the throne of your fallen
+          kingdom. Build alliances, master battlefield tactics, and command
+          legendary heroes in your quest to unite the land once more.
         </p>
         <p>
           Craft your legacy in a world where every sword stroke echoes through
