--- a/src/css/about.css
+++ b/src/css/about.css
@@ -7,6 +7,10 @@
   gap: 24px;
 }
 
+.about-wrp {
+  max-width: 915px;
+}
+
 .about-title {
   font-family: var(--second-family);
   font-weight: 700;
@@ -21,6 +25,7 @@
   line-height: 167%;
   letter-spacing: 0.01em;
   color: #fffffd;
+  max-width: 630px;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -32,7 +37,6 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 125%;
-    max-width: 915px;
   }
 
   .about-content {
