--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,7 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  right: 0;
+
   z-index: 998;
   background-color: #0c0f10;
 }
@@ -39,13 +40,13 @@
 
   .nav-list {
     display: flex;
-    gap: 48px;
+    gap: 40px;
   }
 
   .nav-item {
     font-family: var(--font-family);
     font-weight: 400;
-    font-size: 10px;
+    font-size: 12px;
     color: #fffffd;
     padding: 33px 0;
 
