--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,7 @@
+#home {
+  margin-top: 48px;
+}
+
 .home-content-wrp {
   max-width: 280px;
   display: flex;
@@ -52,6 +56,9 @@
 
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1200px) {
+  #home {
+    margin-top: 78px;
+  }
   .home-content-wrp {
     max-width: 530px;
     margin-top: 80px;
