--- a/src/css/base.css
+++ b/src/css/base.css
@@ -20,10 +20,8 @@
 body {
   display: flex;
   flex-direction: column;
-  min-width: 100vw;
+  margin: 0 auto;
   min-height: 100vh;
-
-  overflow-x: hidden;
 }
 
 html {
