--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -1,5 +1,48 @@
 <section class="section">
-  <div class="container">
-    <!--TODO -->
+  <div class="container htp-wrap">
+    <h2 class="htp-tittle">How to play</h2>
+    <ul class="htp-list">
+      <li class="htp-item">
+        <p class="htp-list-num">1</p>
+        <p class="htp-descr">
+          Choose Your Faction – Each dynasty comes with unique strengths,
+          histories, and heroes.
+        </p>
+      </li>
+      <li class="htp-item">
+        <p class="htp-list-num">2</p>
+        <p class="htp-descr">
+          Recruit Legendary Heroes – Assemble a diverse warband of generals,
+          assassins, and sages.
+        </p>
+      </li>
+      <li class="htp-item">
+        <p class="htp-list-num">3</p>
+        <p class="htp-descr">
+          Build & Expand – Restore your city, train your army, and expand across
+          war-torn lands.
+        </p>
+      </li>
+      <li class="htp-item">
+        <p class="htp-list-num">4</p>
+        <p class="htp-descr">
+          Conquer Territories – Engage in tactical, turn-based combat and siege
+          enemy strongholds.
+        </p>
+      </li>
+      <li class="htp-item">
+        <p class="htp-list-num">5</p>
+        <p class="htp-descr">
+          Form Alliances – Team up with other players or betray them for power.
+        </p>
+      </li>
+      <li class="htp-item">
+        <p class="htp-list-num">6</p>
+        <p class="htp-descr">
+          Shape Your Legacy – Every decision impacts your dynasty’s rise… or
+          fall.
+        </p>
+      </li>
+    </ul>
   </div>
 </section>
