--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,5 +1,116 @@
-<section class="section">
+<section class="faq-section">
   <div class="container">
-    <!--TODO -->
+    <div>
+      <h2 class="faq-title">FAQ</h2>
+      <ul class="faq-list">
+        <li class="faq-items">
+          <div class="faqs-wrapper">
+            <span>
+              <svg class="question-icon" width="70" height="44">
+                <use href="../img/sprite.svg#icon-question"></use>
+              </svg>
+            </span>
+            <p class="faq-items-question">
+              Is Dynasty: Fallen & Rise free to play?
+            </p>
+          </div>
+          <div class="faqs-wrapper">
+            <span>
+              <svg class="question-icon" width="70" height="44">
+                <use href="../img/sprite.svg#icon-answer"></use>
+              </svg>
+            </span>
+            <p class="faq-items-answer">
+              Yes! You can play for free, with optional in-app purchases for
+              cosmetics and boosts.
+            </p>
+          </div>
+        </li>
+        <li class="faq-items">
+          <div class="faqs-wrapper">
+            <span>
+              <svg class="question-icon" width="70" height="44">
+                <use href="../img/sprite.svg#icon-question"></use>
+              </svg>
+            </span>
+            <p class="faq-items-question">Can I play offline?</p>
+          </div>
+          <div class="faqs-wrapper">
+            <span>
+              <svg class="question-icon" width="70" height="44">
+                <use href="../img/sprite.svg#icon-answer"></use>
+              </svg>
+            </span>
+            <p class="faq-items-answer">
+              Core story content is available offline, though multiplayer modes
+              require an internet connection.
+            </p>
+          </div>
+        </li>
+        <li class="faq-items">
+          <div class="faqs-wrapper">
+            <span>
+              <svg class="question-icon" width="70" height="44">
+                <use href="../img/sprite.svg#icon-question"></use>
+              </svg>
+            </span>
+            <p class="faq-items-question">Are there different endings?</p>
+          </div>
+          <div class="faqs-wrapper">
+            <span>
+              <svg class="question-icon" width="70" height="44">
+                <use href="../img/sprite.svg#icon-answer"></use>
+              </svg>
+            </span>
+            <p class="faq-items-answer">
+              Yes! Player choices during campaigns influence the fate of
+              characters and kingdoms.
+            </p>
+          </div>
+        </li>
+        <li class="faq-items">
+          <div class="faqs-wrapper">
+            <span>
+              <svg class="question-icon" width="70" height="44">
+                <use href="../img/sprite.svg#icon-question"></use>
+              </svg>
+            </span>
+            <p class="faq-items-question">Is there a multiplayer mode?</p>
+          </div>
+          <div class="faqs-wrapper">
+            <span>
+              <svg class="question-icon" width="70" height="44">
+                <use href="../img/sprite.svg#icon-answer"></use>
+              </svg>
+            </span>
+            <p class="faq-items-answer">
+              Yes! Participate in real-time PvP battles and join alliances to
+              fight in kingdom-scale wars.
+            </p>
+          </div>
+        </li>
+        <li class="faq-items">
+          <div class="faqs-wrapper">
+            <span>
+              <svg class="question-icon" width="70" height="44">
+                <use href="../img/sprite.svg#icon-question"></use>
+              </svg>
+            </span>
+            <p class="faq-items-question">Will new heroes be added?</p>
+          </div>
+          <div class="faqs-wrapper">
+            <span>
+              <svg class="question-icon" width="70" height="44">
+                <use href="../img/sprite.svg#icon-answer"></use>
+              </svg>
+            </span>
+            <p class="faq-items-answer">
+              Absolutely. New content, heroes, and campaigns are regularly
+              introduced via updates.
+            </p>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
