--- a/src/partials/call-to-action.html
+++ b/src/partials/call-to-action.html
@@ -1,5 +1,46 @@
 <section class="section">
   <div class="container">
-    <!--TODO -->
+    <h2 class="cta-title">Begin Your Legend Now!</h2>
+    <div class="cta-wrapper">
+      <picture class="cta-img">
+        <!--desktop-->
+        <source
+          srcset="
+            /img/cta/cta-picture-desktop.png   1x,
+            /img/cta/cta-picture-desktop@2.png 2x
+          "
+          media="(min-width: 1200px)"
+        />
+
+        <!--mobile -->
+        <source
+          srcset="
+            /img/cta/cta-picture-mobile.png   1x,
+            /img/cta/cta-picture-mobile@2.png 2x
+          "
+          media="(max-width: 1199px)"
+        />
+
+        <!--Fallback-->
+        <img
+          src="/img/cta/cta-picture-mobile.png"
+          alt="Epic warrior"
+          loading="lazy"
+          width="auto"
+          height="auto"
+        />
+      </picture>
+      <div class="cta-item-wrapper">
+        <h3 class="cta-item">
+          Download Dynasty: Fallen & Rise and Forge Your Path to Glory!
+        </h3>
+        <a class="cta-download" href="#">
+          <svg class="burger-icon" width="14" height="16">
+            <use href="/img/sprite.svg#icon-google-play-icon"></use>
+          </svg>
+          <span>Google Play</span>
+        </a>
+      </div>
+    </div>
   </div>
 </section>
