--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -7,7 +7,7 @@
           <div class="faqs-wrapper">
             <span>
               <svg class="question-icon" width="70" height="44">
-                <use href="../img/sprite.svg#icon-question"></use>
+                <use href="./img/sprite.svg#icon-question"></use>
               </svg>
             </span>
             <p class="faq-items-question">
@@ -17,7 +17,7 @@
           <div class="faqs-wrapper">
             <span>
               <svg class="question-icon" width="70" height="44">
-                <use href="../img/sprite.svg#icon-answer"></use>
+                <use href="./img/sprite.svg#icon-answer"></use>
               </svg>
             </span>
             <p class="faq-items-answer">
@@ -30,7 +30,7 @@
           <div class="faqs-wrapper">
             <span>
               <svg class="question-icon" width="70" height="44">
-                <use href="../img/sprite.svg#icon-question"></use>
+                <use href="./img/sprite.svg#icon-question"></use>
               </svg>
             </span>
             <p class="faq-items-question">Can I play offline?</p>
@@ -38,7 +38,7 @@
           <div class="faqs-wrapper">
             <span>
               <svg class="question-icon" width="70" height="44">
-                <use href="../img/sprite.svg#icon-answer"></use>
+                <use href="./img/sprite.svg#icon-answer"></use>
               </svg>
             </span>
             <p class="faq-items-answer">
@@ -51,7 +51,7 @@
           <div class="faqs-wrapper">
             <span>
               <svg class="question-icon" width="70" height="44">
-                <use href="../img/sprite.svg#icon-question"></use>
+                <use href="./img/sprite.svg#icon-question"></use>
               </svg>
             </span>
             <p class="faq-items-question">Are there different endings?</p>
@@ -59,7 +59,7 @@
           <div class="faqs-wrapper">
             <span>
               <svg class="question-icon" width="70" height="44">
-                <use href="../img/sprite.svg#icon-answer"></use>
+                <use href="./img/sprite.svg#icon-answer"></use>
               </svg>
             </span>
             <p class="faq-items-answer">
@@ -72,7 +72,7 @@
           <div class="faqs-wrapper">
             <span>
               <svg class="question-icon" width="70" height="44">
-                <use href="../img/sprite.svg#icon-question"></use>
+                <use href="./img/sprite.svg#icon-question"></use>
               </svg>
             </span>
             <p class="faq-items-question">Is there a multiplayer mode?</p>
@@ -80,7 +80,7 @@
           <div class="faqs-wrapper">
             <span>
               <svg class="question-icon" width="70" height="44">
-                <use href="../img/sprite.svg#icon-answer"></use>
+                <use href="./img/sprite.svg#icon-answer"></use>
               </svg>
             </span>
             <p class="faq-items-answer">
@@ -93,7 +93,7 @@
           <div class="faqs-wrapper">
             <span>
               <svg class="question-icon" width="70" height="44">
-                <use href="../img/sprite.svg#icon-question"></use>
+                <use href="./img/sprite.svg#icon-question"></use>
               </svg>
             </span>
             <p class="faq-items-question">Will new heroes be added?</p>
@@ -101,7 +101,7 @@
           <div class="faqs-wrapper">
             <span>
               <svg class="question-icon" width="70" height="44">
-                <use href="../img/sprite.svg#icon-answer"></use>
+                <use href="./img/sprite.svg#icon-answer"></use>
               </svg>
             </span>
             <p class="faq-items-answer">
