--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -1,5 +1,160 @@
 <section class="section">
-  <div class="container">
-    <!--TODO -->
+  <div class="container ftr-wrap">
+    <h2 class="ftr-title">Game features</h2>
+
+    <ul class="ftr-list">
+      <li class="ftr-item">
+        <picture>
+          <source
+            srcset="/img/features/ftr1.png 1x, /img/features/ftr1@2.png 2x"
+            media="(min-resolution: 192dpi)"
+          />
+          <!--Fallback-->
+          <img
+            src="/img/features/ftr1.png"
+            alt="Epic warrior"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+
+        <p>
+          <strong>Deep Strategic Combat:</strong> Tactical battles that
+          challenge your mind and military precision.
+        </p>
+      </li>
+
+      <li class="ftr-item">
+        <picture>
+          <source
+            srcset="/img/features/ftr2.png 1x, /img/features/ftr2@2.png 2x"
+            media="(min-resolution: 192dpi)"
+          />
+          <!--Fallback-->
+          <img
+            src="/img/features/ftr2.png"
+            alt="Epic warrior"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+
+        <p>
+          <strong>Massive Campaign Map:</strong> Explore kingdoms, mountains,
+          deserts, and lost temples.
+        </p>
+      </li>
+
+      <li class="ftr-item">
+        <picture>
+          <source
+            srcset="/img/features/ftr3.png 1x, /img/features/ftr3@2.png 2x"
+            media="(min-resolution: 192dpi)"
+          />
+          <!--Fallback-->
+          <img
+            src="/img/features/ftr3.png"
+            alt="Epic warrior"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+
+        <p>
+          <strong>Hero System:</strong> Recruit and train legendary warriors,
+          each with their own backstory and skills.
+        </p>
+      </li>
+
+      <li class="ftr-item">
+        <picture>
+          <source
+            srcset="/img/features/ftr4.png 1x, /img/features/ftr4@2.png 2x"
+            media="(min-resolution: 192dpi)"
+          />
+          <!--Fallback-->
+          <img
+            src="/img/features/ftr4.png"
+            alt="Epic warrior"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+
+        <p>
+          <strong>Interactive Storytelling:</strong> Choices affect
+          relationships, war outcomes, and future events.
+        </p>
+      </li>
+
+      <li class="ftr-item">
+        <picture>
+          <source
+            srcset="/img/features/ftr5.png 1x, /img/features/ftr5@2.png 2x"
+            media="(min-resolution: 192dpi)"
+          />
+          <!--Fallback-->
+          <img
+            src="/img/features/ftr5.png"
+            alt="Epic warrior"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+
+        <p>
+          <strong>Dynasty Management:</strong> Manage resources, diplomacy,
+          armies, and political stability.
+        </p>
+      </li>
+
+      <li class="ftr-item">
+        <picture>
+          <source
+            srcset="/img/features/ftr6.png 1x, /img/features/ftr6@2.png 2x"
+            media="(min-resolution: 192dpi)"
+          />
+          <!--Fallback-->
+          <img
+            src="/img/features/ftr6.png"
+            alt="Epic warrior"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+
+        <p>
+          <strong>Stunning Visuals:</strong> Breathtaking animations, hand-drawn
+          portraits, and dynamic environments.
+        </p>
+      </li>
+
+      <li class="ftr-item">
+        <picture>
+          <source
+            srcset="/img/features/ftr7.png 1x, /img/features/ftr7@2.png 2x"
+            media="(min-resolution: 192dpi)"
+          />
+          <!--Fallback-->
+          <img
+            src="/img/features/ftr7.png"
+            alt="Epic warrior"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+        <p>
+          <strong>PvP & PvE Modes:</strong> Compete globally or conquer through
+          immersive solo campaigns.
+        </p>
+      </li>
+    </ul>
   </div>
 </section>
