--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -1,3 +1,8 @@
+.faq-wrp {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .faq-title {
   font-family: var(--second-family);
   font-size: 20px;
