--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,5 +1,5 @@
-<section class="faq-section">
-  <div class="container">
+<section class="section">
+  <div class="container faq-wrp">
     <div>
       <h2 class="faq-title">FAQ</h2>
       <ul class="faq-list">
