--- a/src/css/call-to-action.css
+++ b/src/css/call-to-action.css
@@ -55,6 +55,9 @@
   }
 }
 @media only screen and (min-width: 1200px) {
+  .cta-title {
+    font-size: 32px;
+  }
   .cta-wrapper {
     flex-direction: row;
   }
