--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section" id="features">
   <div class="container ftr-wrap">
     <h2 class="ftr-title">Game features</h2>
 
