--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,7 +20,12 @@
         <li class="nav-item"><a href="#reviews">Reviews</a></li>
         <li class="nav-item"><a href="#faq">FAQ</a></li>
       </ul>
-      <button class="burger-btn" type="button" id="burger-btn">
+      <button
+        class="burger-btn"
+        type="button"
+        id="burger-btn"
+        data-action="open"
+      >
         <svg class="burger-icon" width="24" height="24">
           <use href="/img/sprite.svg#icon-burger"></use>
         </svg>
