--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section" id="how-to-play">
   <div class="container htp-wrap">
     <h2 class="htp-tittle">How to play</h2>
     <ul class="htp-list">
