--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -51,5 +51,12 @@
 .mob-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 16px;
+}
+
+.mob-menu-link {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 12px;
+  color: #fffffd;
 }
