--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section" id="faq">
   <div class="container faq-wrp">
     <div>
       <h2 class="faq-title">FAQ</h2>
