--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -40,7 +40,7 @@
           RPG!
         </p>
         <a class="home-download" href="#">
-          <svg class="burger-icon" width="14" height="16">
+          <svg class="play-icon" width="14" height="16">
             <use href="/img/sprite.svg#icon-google-play-icon"></use>
           </svg>
             <span>Download on Google Play</span>
