--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -25,14 +25,20 @@
 }
 
 .mob-menu-container {
-  background: #0c0f10;
+  position: absolute;
+  top: 8%;
+  bottom: 8%;
+  right: 2%;
+  background: rgba(12, 15, 16, 1);
   width: 225px;
-  height: 100%;
   border-radius: 10px;
   padding: 64px 56px;
-
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .mob-menu-overlay[data-visible='open'] .mob-menu-container {
