finised reviews section

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,58 @@
 <section class="section">
   <div class="container">
-    <!--TODO -->
+    <div>
+      <h2 class="reviews-title">REVIEWS</h2>
+      <ul class="reviews-list">
+        <li class="reviews-items">
+          <div class="reviews-wrapper">
+            <p class="reviews-items-user">Alexander W.:</p>
+
+            <p class="reviews-items-note">
+              "An epic saga of strategy and emotion. I've never cared this much
+              about my army!"
+            </p>
+          </div>
+        </li>
+        <li class="reviews-items">
+          <div class="reviews-wrapper right">
+            <p class="reviews-items-user">Mira H.:</p>
+
+            <p class="reviews-items-note">
+              "The decisions actually matter! Every campaign feels different."
+            </p>
+          </div>
+        </li>
+        <li class="reviews-items">
+          <div class="reviews-wrapper">
+            <p class="reviews-items-user">Dante K.:</p>
+
+            <p class="reviews-items-note">
+              "The mix of tactical gameplay and deep lore is masterful. Highly
+              addictive."
+            </p>
+          </div>
+        </li>
+        <li class="reviews-items">
+          <div class="reviews-wrapper right">
+            <p class="reviews-items-user">Selina R.:</p>
+
+            <p class="reviews-items-note">
+              "Heroes have actual personality — I grew attached to every general
+              in my roster."
+            </p>
+          </div>
+        </li>
+        <li class="reviews-items">
+          <div class="reviews-wrapper">
+            <p class="reviews-items-user">Zhao L.:</p>
+
+            <p class="reviews-items-note">
+              "Best war strategy RPG on mobile. The visuals are on another
+              level."
+            </p>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
