--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section id="reviews">
   <div class="container">
     <div>
       <h2 class="reviews-title">REVIEWS</h2>
