--- a/src/partials/call-to-action.html
+++ b/src/partials/call-to-action.html
@@ -24,7 +24,7 @@
         <!--Fallback-->
         <img
           src="/img/cta/cta-picture-mobile.png"
-          alt="Epic warrior"
+          alt="Monster"
           loading="lazy"
           width="auto"
           height="auto"
