--- a/src/partials/call-to-action.html
+++ b/src/partials/call-to-action.html
@@ -34,7 +34,7 @@
         <h3 class="cta-item">
           Download Dynasty: Fallen & Rise and Forge Your Path to Glory!
         </h3>
-        <a class="cta-download" href="#">
+        <a class="cta-download" target="_blank" href="https://play.google.com/store/apps/details?id=com.xmsgnew.sgn">
           <svg class="burger-icon" width="14" height="16">
             <use href="/img/sprite.svg#icon-google-play-icon"></use>
           </svg>
