--- a/src/partials/cookies-modal.html
+++ b/src/partials/cookies-modal.html
@@ -1,1 +1,14 @@
-
+<div class="cookies-overlay" data-visible="open">
+  <div class="cookies-container">
+    <div class="cookies-bg"></div>
+    <div class="cookies-content">
+      <h2 class="cookies-title">Cookies policy</h2>
+      <p class="cookies-descr">
+        We use cookies to improve your experience on our website. By browsing
+        this website, you agree to our use of cookies.
+      </p>
+      <button class="cookies-btn" type="button">Accept Cookies</button
+      ><button class="cookies-btn" type="button">Decline Cookies</button>
+    </div>
+  </div>
+</div>
