--- a/src/css/cookies-modal.css
+++ b/src/css/cookies-modal.css
@@ -5,21 +5,22 @@
   position: fixed;
   top: 0;
   right: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
   z-index: 999;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cookies-overlay[data-visible='open'] {
+.cookies-overlay[data-is-cookies='open'] {
   opacity: 1;
   pointer-events: auto;
 }
 
-.cookies-overlay[data-visible='close'] {
+.cookies-overlay[data-is-cookies='close'] {
   opacity: 0;
   pointer-events: none;
 }
@@ -28,12 +29,17 @@
   width: 100%;
   position: absolute;
   bottom: 0;
-  transform: translateY(-100%);
-  transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transform: translateY(100%);
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cookies-overlay[data-visible='open'] .cookies-container {
+.cookies-overlay[data-is-cookies='open'] .cookies-container {
   transform: translateY(0);
+}
+
+.cookies-overlay[data-is-cookies='close'] .cookies-container {
+  transform: translateY(100%);
 }
 
 .cookies-content {
@@ -41,6 +47,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  align-items: center;
   gap: 16px;
   background-color: #182223;
   padding: 20px;
@@ -51,6 +58,7 @@
   background-image: url('../img/cookie/cookie-bg.png');
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 .cookies-title {
@@ -79,4 +87,42 @@
   font-weight: 400;
   font-size: 14px;
   color: #000;
+  &:hover {
+    box-shadow: 0 4px 4px -3px #fffffd;
+    background: #fffffd;
+  }
+  &:active {
+    background: #fff;
+  }
+}
+
+.cookies-btn-wrp {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  align-items: center;
+  justify-content: center;
+}
+
+@media only screen and (min-width: 1200px) {
+  .cookies-btn-wrp {
+    flex-direction: row;
+  }
+
+  .cookies-content {
+    gap: 26px;
+  }
+
+  .cookies-bg {
+    width: 100%;
+    height: 150px;
+    background-image: url('../img/cookie/cookie-bg-desktop.png');
+    background-color: #182223;
+    background-size: contain;
+  }
+
+  .cookies-descr {
+    font-size: 16px;
+    max-width: 100%;
+  }
 }
