--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,20 +5,26 @@
         <img src="/img/header/logo.png" alt="Logo" width="32" height="32" />
       </a>
       <ul class="nav-list">
-        <li class="nav-item"><a class="nav-item" href="#home">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
         <li class="nav-item">
-          <a class="nav-item" href="#about">About the game</a>
+          <a class="nav-link" href="#about">About the game</a>
         </li>
         <li class="nav-item">
-          <a class="nav-item" href="#how-to-play">How to play</a>
+          <a class="nav-link" href="#how-to-play">How to play</a>
         </li>
         <li class="nav-item">
-          <a class="nav-item" href="#features">Game features</a>
+          <a class="nav-link" href="#features">Game features</a>
         </li>
-        <li class="nav-item"><a href="#characters">Main characters</a></li>
-        <li class="nav-item"><a href="#atmosphere">Game atmosphere</a></li>
-        <li class="nav-item"><a href="#reviews">Reviews</a></li>
-        <li class="nav-item"><a href="#faq">FAQ</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="#characters">Main characters</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#atmosphere">Game atmosphere</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#reviews">Reviews</a>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
       </ul>
       <button
         class="burger-btn"
