--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -5,8 +5,8 @@
         <!--desktop-->
         <source
           srcset="
-            /img/home/main-picture-desktop.png   1x,
-            /img/home/main-picture-desktop@2.png 2x
+            /img/home/p.png   1x,
+            /img/home/p@2.png 2x
           "
           media="(min-width: 1200px)"
         />
@@ -15,8 +15,7 @@
         <source
           srcset="
             /img/home/main-picture-mobile.png   1x,
-            /img/home/main-picture-mobile@2.png 2x
-          "
+            /img/home/main-picture-mobile@2.png 2x"
           media="(max-width: 1199px)"
         />
 
