--- a/src/css/atmosphere.css
+++ b/src/css/atmosphere.css
@@ -22,6 +22,10 @@
   padding: 18px 0;
   gap: 24px;
   margin-bottom: 40px;
+  background: #0c0f10;
+  border-radius: 75px;
+  margin-right: auto;
+  margin-left: auto;
 }
 .atm-img {
   width: 251px;
@@ -33,8 +37,12 @@
   }
   .atm-wrapper {
     width: 1040px;
+    height: 266px;
     flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
     gap: 80px;
+    border-radius: 133px;
   }
   .atm-img {
     width: 339px;
