--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  margin-bottom: 40px;
+  margin: 0 auto 40px;
 }
 .reviews-items-user {
   width: 131px;
@@ -22,7 +22,6 @@
   color: #fffffd;
   border-radius: 100%;
   text-align: center;
-  /* vertical-align: middle; */
   padding-top: 20px;
 }
 .reviews-items-note {
@@ -45,6 +44,9 @@
   .reviews-title {
     font-size: 32px;
     margin-bottom: 24px;
+  }
+  .reviews-list {
+    width: 884px;
   }
   .reviews-wrapper {
     flex-direction: row;
