--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -38,7 +38,7 @@
           Lead your kingdom through betrayal, war, and glory in this epic strategy
           RPG!
         </p>
-        <a class="home-download" href="#">
+        <a class="home-download" href="https://play.google.com/store/apps/details?id=com.xmsgnew.sgn&hl=en&gl=us">
           <svg class="play-icon" width="14" height="16">
             <use href="/img/sprite.svg#icon-google-play-icon"></use>
           </svg>
