--- a/src/css/header.css
+++ b/src/css/header.css
@@ -27,9 +27,21 @@
   padding: 10px 5px 6px 0;
 }
 
-.nav-item a.active {
+.nav-link {
+  position: relative;
+  transition: color 0.3s;
+}
+
+.nav-link.active {
   color: #e2b875;
-  font-weight: 700;
+  border: 1px #e2b875 solid;
+  border-radius: 10px;
+  padding: 6px;
+  background-color: linear-gradient(to bottom, #1a1f1f, #0d1414);
+  box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.1),
+    inset 0 -2px 4px rgba(0, 0, 0, 0.6), 0 4px 8px rgba(0, 0, 0, 0.6);
+  transition: all 0.3s ease;
+  position: relative;
 }
 
 @media only screen and (min-width: 1200px) {
