--- a/src/partials/characters.html
+++ b/src/partials/characters.html
@@ -1,5 +1,179 @@
-<section class="section">
+<section class="section" id="characters">
   <div class="container">
+    <h2 class="char-title">Main characters</h2>
+    <ul class="char-list">
+      <li class="char-item">
+        <picture class="char-img">
+          <!--desktop-->
+          <source
+            srcset="
+              /img/characters/kairos-picture-mobile@2.png  1x,
+              /img/characters/kairos-picture-desktop@2.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+
+          <!--mobile -->
+          <source
+            srcset="
+              /img/characters/kairos-picture-mobile.png   1x,
+              /img/characters/kairos-picture-mobile@2.png 2x
+            "
+            media="(max-width: 1199px)"
+          />
+
+          <!--Fallback-->
+          <img
+            src="/img/characters/kairos-picture-mobile.png"
+            alt="General Kairos"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+        <h3 class="char-item-title">General Kairos</h3>
+        <p class="char-item-content">
+          A fallen warlord known for brutal tactics and undying loyalty.
+        </p>
+      </li>
+      <li class="char-item">
+        <picture class="char-img">
+          <!--desktop-->
+          <source
+            srcset="
+              /img/characters/lady-picture-mobile@2.png  1x,
+              /img/characters/lady-picture-desktop@2.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+
+          <!--mobile -->
+          <source
+            srcset="
+              /img/characters/lady-picture-mobile.png   1x,
+              /img/characters/lady-picture-mobile@2.png 2x
+            "
+            media="(max-width: 1199px)"
+          />
+
+          <!--Fallback-->
+          <img
+            src="/img/characters/lady-picture-mobile.png"
+            alt="Lady An-Mei"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+        <h3 class="char-item-title">Lady An-Mei</h3>
+        <p class="char-item-content">
+          A cunning diplomat skilled in espionage and poison.
+        </p>
+      </li>
+      <li class="char-item">
+        <picture class="char-img">
+          <!--desktop-->
+          <source
+            srcset="
+              /img/characters/shen-picture-mobile@2.png  1x,
+              /img/characters/shen-picture-desktop@2.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+
+          <!--mobile -->
+          <source
+            srcset="
+              /img/characters/shen-picture-mobile.png   1x,
+              /img/characters/shen-picture-mobile@2.png 2x
+            "
+            media="(max-width: 1199px)"
+          />
+
+          <!--Fallback-->
+          <img
+            src="/img/characters/shen-picture-mobile.png"
+            alt="Master Shen"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+        <h3 class="char-item-title">Master Shen</h3>
+        <p class="char-item-content">
+          An ancient monk with forbidden magic and unparalleled wisdom.
+        </p>
+      </li>
+      <li class="char-item">
+        <picture class="char-img">
+          <!--desktop-->
+          <source
+            srcset="
+              /img/characters/riku-picture-mobile@2.png  1x,
+              /img/characters/riku-picture-desktop@2.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+
+          <!--mobile -->
+          <source
+            srcset="
+              /img/characters/riku-picture-mobile.png   1x,
+              /img/characters/riku-picture-mobile@2.png 2x
+            "
+            media="(max-width: 1199px)"
+          />
+
+          <!--Fallback-->
+          <img
+            src="/img/characters/riku-picture-mobile.png"
+            alt="Prince Riku"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+        <h3 class="char-item-title">Prince Riku</h3>
+        <p class="char-item-content">
+          A noble warrior haunted by the betrayal that shattered his realm.
+        </p>
+      </li>
+      <li class="char-item wide-card">
+        <picture class="char-img">
+          <!--desktop-->
+          <source
+            srcset="
+              /img/characters/exile-picture-mobile@2.png  1x,
+              /img/characters/exile-picture-desktop@2.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+
+          <!--mobile -->
+          <source
+            srcset="
+              /img/characters/exile-picture-mobile.png   1x,
+              /img/characters/exile-picture-mobile@2.png 2x
+            "
+            media="(max-width: 1199px)"
+          />
+
+          <!--Fallback-->
+          <img
+            src="/img/characters/exile-picture-mobile.png"
+            alt="The Empress in Exile"
+            loading="lazy"
+            width="auto"
+            height="auto"
+          />
+        </picture>
+        <h3 class="char-item-title">The Empress in Exile</h3>
+        <p class="char-item-content">
+          A mysterious force rising from the shadows to claim destinshattered
+          his realm.
+        </p>
+      </li>
+    </ul>
     <!--TODO -->
   </div>
 </section>
