--- a/src/partials/call-to-action.html
+++ b/src/partials/call-to-action.html
@@ -31,13 +31,12 @@
         />
       </picture>
       <div class="cta-item-wrapper">
-
         <div>
-          <h3 class="cta-item">Download Dynasty: Fallen & Rise</h3>
-          <h3 class="cta-item">and Forge Your Path to Glory!</h3>
+          <h3 class="cta-item">
+            Download Dynasty: Fallen & Rise and Forge Your Path to Glory!
+          </h3>
         </div>
         <a class="cta-download" href="#">
-
           <svg class="burger-icon" width="14" height="16">
             <use href="/img/sprite.svg#icon-google-play-icon"></use>
           </svg>
