--- a/src/css/characters.css
+++ b/src/css/characters.css
@@ -72,4 +72,19 @@
   .char-item-content {
     font-size: 16px;
   }
+
+  .char-item img {
+    clip-path: circle(49% at 50% 50%);
+  }
+
+  .char-item img {
+    transition: transform 700ms cubic-bezier(0.4, 0, 0.2, 1),
+      mask-image 700ms ease;
+  }
+
+  .char-item img:hover {
+    border: none;
+    transform: scale(1.15);
+    mask-image: radial-gradient(black 65%, transparent 70%);
+  }
 }
