--- a/src/partials/characters.html
+++ b/src/partials/characters.html
@@ -3,7 +3,7 @@
     <h2 class="char-title">Main characters</h2>
     <ul class="char-list">
       <li class="char-item">
-        <picture class="char-img">
+        <picture class="char-img" data-aos="zoom-out-right">
           <!--desktop-->
           <source
             srcset="
@@ -37,7 +37,7 @@
         </p>
       </li>
       <li class="char-item">
-        <picture class="char-img">
+        <picture class="char-img" data-aos="fade-down">
           <!--desktop-->
           <source
             srcset="
@@ -71,7 +71,7 @@
         </p>
       </li>
       <li class="char-item">
-        <picture class="char-img">
+        <picture class="char-img" data-aos="zoom-out-left">
           <!--desktop-->
           <source
             srcset="
@@ -105,7 +105,7 @@
         </p>
       </li>
       <li class="char-item">
-        <picture class="char-img">
+        <picture class="char-img" data-aos="fade-up-right">
           <!--desktop-->
           <source
             srcset="
@@ -139,7 +139,7 @@
         </p>
       </li>
       <li class="char-item wide-card">
-        <picture class="char-img">
+        <picture class="char-img" data-aos="fade-up-left">
           <!--desktop-->
           <source
             srcset="
