zoom in second character

--- a/src/partials/characters.html
+++ b/src/partials/characters.html
@@ -37,7 +37,7 @@
         </p>
       </li>
       <li class="char-item">
-        <picture class="char-img" data-aos="fade-down">
+        <picture class="char-img" data-aos="zoom-in">
           <!--desktop-->
           <source
             srcset="
